# pinot-voir

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
py-client/: main.py  output.raw  pyproject.toml  serial_log.py
src/: lib.rs  main.rs
src/common/: dht22_server.rs  dht22_tools.rs  mod.rs  sensor_tools.rs  shared_functions.rs  supabase.rs  wifi.rs
