[package]
name = "pinot_voir"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
embassy-sync = { version = "0.7.1", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040"   
] }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
cyw43 = { version = "0.4.0", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.6.0", features = ["defmt"] }


defmt = "1.0.1"
defmt-rtt = "1.0.0"

# for web request example
reqwless = { version = "0.13.0", features = ["defmt"] }


cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embedded-graphics = "0.8.1"
st7789 = "0.6.1"
heapless = "0.8"


embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
static_cell = { version = "2.1", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
rand = { version = "0.8.5", default-features = false }

picoserve = { version = "0.16.0", features = ["embassy"] }
embassy-dht = { git = "https://github.com/jcorrie/embassy-dht", branch = "deps", default-features = false, features = ["dht22", "dht11", "dht20", "rp2040"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"


[[bin]]
name = "main"
path = "src/main.rs"
test = false
doctest = false
bench = false


[[bin]]
name = "blink"
path = "src/bin/blink.rs"
test = false
doctest = false
bench = false


[[bin]]
name = "server"
path = "src/bin/server.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "server-supabase"
path = "src/bin/server-supabase.rs"
test = false
doctest = false
bench = false


[[bin]]
name = "read_dht22"
path = "src/bin/read_dht22.rs"
test = false
doctest = false
bench = false


[[bin]]
name = "supabase"
path = "src/bin/supabase.rs"
test = false
doctest = false
bench = false


[lib]
name = "pinot_voir"
path = "src/lib.rs"
test = false
doctest = false
bench = false
